--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
-*.class
+# C++ binaries
+*.o
+*.exe
 
-# Package Files #
-*.jar
-*.war
-*.ear
+#eclipse metada - polutes commits
+.metadata
+
+#EAP temps
+*.ldb
+
+#Java binaries
+*.class
